# tallerII

./: .gitignore  .travis.yml  BUILD_COVERAGE_REPORT.sh  CMakeLists.txt  Dockerfile  README.md  RUN_TESTS.sh  install.sh  make_package.sh  purge.sh
ApplicationServer/: CMakeLists.txt  Dockerfile  README.md  main.cpp
ApplicationServer/code/: CMakeLists.txt  main.cpp
ApplicationServer/code/api/: Handler.h  UsersHandler.cpp  UsersHandler.h  WebHandler.h
ApplicationServer/docs/: Documentacion.odt
ApplicationServer/src/: CMakeLists.txt  config.js  main.cpp  testing_levedb.cpp
ApplicationServer/src/DB/: ApplicationSDB.cpp  ApplicationSDB.h  DBWrapper.cpp  DBWrapper.h
ApplicationServer/src/Exceptions/: BadImplementationException.h  ErrorDeletingFileException.h  ErrorLoginWithFacebookException.h  ErrorOpeningDatabaseException.h  InvalidPasswordException.h  InvalidRequestException.h  InvalidTokenException.h  KeyNotFound.h  MissingConfigurationException.h  NonexistentNotificationToken.h  NotAuthorizedException.h  PictureNotFoundException.h  SpecialRequestException.h  TokenExpiredException.h  UserAlreadyExistsException.h  UserNotFoundException.h
ApplicationServer/src/Mongoose/: CMakeLists.txt  mongoose.c
ApplicationServer/src/Security/: Security.cpp  Security.h
ApplicationServer/src/api/: Handler.cpp  Handler.h  Response.cpp  Response.h  UsersHandler.cpp  UsersHandler.h  WebHandler.cpp  WebHandler.h
ApplicationServer/src/api/exception/: UserNotFoundException.h
ApplicationServer/src/api/handler/: AllUsersHandler.cpp  AllUsersHandler.h  ContactsHandler.cpp  ContactsHandler.h  ConversationsHandler.cpp  ConversationsHandler.h  Handler.cpp  Handler.h  LoginHandler.cpp  LoginHandler.h  LoginWithFacebookHandler.cpp  LoginWithFacebookHandler.h  MessagesHandler.cpp  MessagesHandler.h  NotificationTokenHandler.cpp  NotificationTokenHandler.h  PictureHandler.cpp  PictureHandler.h  RecommendationsHandler.cpp  RecommendationsHandler.h  SearchHandler.cpp  SearchHandler.h  TopTenHandler.cpp  TopTenHandler.h  UsersHandler.cpp  UsersHandler.cpp.orig  UsersHandler.h
ApplicationServer/src/config/: Config.cpp  Config.h
ApplicationServer/src/jsoncpp/: CMakeLists.txt
ApplicationServer/src/lcov/share/man/man1/: gendesc.1  genhtml.1  geninfo.1  genpng.1  lcov.1
ApplicationServer/src/lcov/share/man/man5/: lcovrc.5
ApplicationServer/src/leveldb/: #Makefile#  CMakeLists.txt
ApplicationServer/src/logger/: Logger.cpp  Logger.h
ApplicationServer/src/person/: Location.cpp  Location.h  Manager.cpp  Manager.h  Person.cpp  Person.h  PersonManager.cpp  PersonManager.h  Skill.cpp  Skill.h  WorkHistory.cpp  WorkHistory.h
ApplicationServer/src/person/messages/: Conversation.cpp  Conversation.h  Message.cpp  Message.h  Message.h.orig  MessagesManager.cpp  MessagesManager.cpp.orig  MessagesManager.h  MessagesManager.h.orig  NotificationTokenManager.cpp  NotificationTokenManager.h
ApplicationServer/src/person/recommendation/: RecommendationsManager.cpp  RecommendationsManager.h
ApplicationServer/src/person/relation/: Contact.cpp  Contact.h  RelationsManager.cpp  RelationsManager.h
ApplicationServer/src/session/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
ApplicationServer/src/tests/: CMakeLists.txt  CodeCoverage.cmake  SearchUsersTesting.cpp  config.js  gtest_main.cpp  initdb.cpp  testing_ABMUsers.cpp  testing_API.cpp  testing_Contacts.cpp  testing_Location.cpp  testing_Person.cpp  testing_Session.cpp  testing_Skill.cpp  testing_WorkHistory.cpp  testing_api2.cpp  testing_api2.h  testing_gtest.cpp  testing_leveldb.cpp  testing_uniqueDB.cpp
ApplicationServer/src/tests/apitests/: testing_allusers.yaml  testing_contacts_addContact.yaml  testing_contacts_commonErrors.yaml  testing_contacts_deleteContact.yaml  testing_contacts_notification.yaml  testing_contacts_rejectContact.yaml  testing_contacts_twoContacts.yaml  testing_conversations.yaml  testing_conversations_commonErrors.yaml  testing_facebooklogin.yaml  testing_facebooklogin_commonErrors.yaml  testing_login.yaml  testing_login_commonErrors.yaml  testing_messages.yaml  testing_messages_chatUser1User2.yaml  testing_messages_commonErrors.yaml  testing_messages_truncate.yaml  testing_notificationtoken.yaml  testing_pictures.yaml  testing_pictures_add.yaml  testing_pictures_commonErrors.yaml  testing_pictures_delete.yaml  testing_pictures_get.yaml  testing_recommendations_add.yaml  testing_recommendations_commonErrors.yaml  testing_recommendations_delete.yaml  testing_search.yaml  testing_users_add.yaml  testing_users_commonErrors.yaml  testing_users_delete.yaml  testing_users_get.yaml  testing_users_update.yaml
ApplicationServer/src/tests/person/: testing_Person.cpp  testing_Skill.cpp
ApplicationServer/src/tests/person/messages/: testing_Conversation.cpp
ApplicationServer/src/tests/person/relation/: testing_Contacts.cpp
ApplicationServer/src/tests/session/: testing_Session.cpp
ApplicationServer/src/tools/: DbBuilder.cpp  DbBuilder.h  DbBuilder.h.orig  DummyServer.cpp  DummyServer.h  MainHelper.cpp  MainHelper.h  NotificationSender.cpp  NotificationSender.h
ApplicationServer/src/tools/DbBuilderSettings/: JobPositionsFromSharedServer.js  SkillsFromSharedServer.js
ApplicationServer/tests/: CMakeLists.txt  Dockerfile  entrypoint.sh  help.txt  integration.yaml  run_test.sh  testing_allusers.yaml  testing_contacts.yaml  testing_levedb.cpp  testing_messages.yaml  testing_notificationtoken.yaml  testing_recommendations.yaml  testing_users.yaml
SharedServer/: Dockerfile  README.md  entrypoint.sh
SharedServer/code/: db.js  db.sql  package.json  server.js  urls.js  views.js
SharedServer/code/public/: categories.html  core.js  form.html  index.html  style.css
SharedServer/docs/: Documentación técnica de funcionamiento.rst  Makefile  conf.py
SharedServer/docs/_build/doctrees/: Administración e interfaz gráfica.doctree  Documentación técnica de funcionamiento.doctree  Instalación.doctree  (+3 more)
SharedServer/tests/: integration.yaml
app/Jobify/app/: build.gradle  google-services.json
testing_apk/: app-debug.apk
(+118 files in other folders)
